fixed top px for catalog on mobile

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -579,7 +579,7 @@ h4{
 		thead {
 			background:white;
 			position:sticky;
-			top:0;
+			top:-2px;
 			width: 100%;
 			table-layout: fixed;
 			z-index: 3;
